Ignore local SQLite DB

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ __pycache__/
 # Reports / generated outputs
 reports/*.csv
 reports/._*
+
+# Local data / DB
+data/*.db
+data/*.sqlite*
+*.db
+*.sqlite*
